@@ -1,3 +1,7 @@
+2004-03-04  ujwal
+
+	* Fixed "Send Inout to All Tabs" and "Paste".
+
 2004-03-03  ujwal
 
 	* Made application of transparency more consistent.
